# how-to-create-simple-sagemaker-pipelines

./: .env  .gitignore  README.md  datatrove_sm_pipelines.py  pyproject.toml  requirements.txt  simple_datatrove.py  simple_sm_pipelines.py
